Refs #97956 fixed portal-breacrumbs z-index on tablet/desktop res

--- a/src/forests/theme/skins/fise_theme_styles/components/content-area.less
+++ b/src/forests/theme/skins/fise_theme_styles/components/content-area.less
@@ -69,16 +69,18 @@
   background-color: lightgrey;
 }
 
-
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
   #portal-breadcrumbs {
     margin-top:2rem;
     margin-bottom: 2rem;
   }
-}
-
-@media screen and (max-width: 767px) {
   #portal-columns {
     margin-top: 90px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #portal-breadcrumbs {
+    z-index: 101;
   }
 }
